# ism-device-crypto

./: .gitignore  CMakeLists.txt  README.md  aes.c  aes.h  createKey.c  create_key.c  crypto.c  crypto.h  decrypt_data.c.c  encrypt_data.c  global.c  global.h  main.c  tpm.c  tpm.h
